Firefox on mobile android fix

--- a/styles.css
+++ b/styles.css
@@ -719,3 +719,9 @@ body {
         transform: translateY(0);
     }
 }
+
+@supports (-moz-appearance: none) {
+  .settings-screen {
+    height: 100dvh;
+  }
+}
